--- a/Android/scenes/voice/src/main/res/layout/voice_dialog_chatroom_bgm_setting.xml
+++ b/Android/scenes/voice/src/main/res/layout/voice_dialog_chatroom_bgm_setting.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/voice_bg_rect_top_radius20_white">
 
     <View
@@ -10,7 +11,7 @@
         android:layout_height="0dp"
         android:background="@drawable/voice_bg_rect_top_radius20_gradient_white"
         app:layout_constraintTop_toTopOf="@+id/ivBottomSheetTitle"
-        app:layout_constraintBottom_toBottomOf="@+id/mtBottomSheetTitle"/>
+        app:layout_constraintBottom_toBottomOf="@+id/tvDialogTitle"/>
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/ivBottomSheetTitle"
@@ -23,8 +24,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/mtBottomSheetTitle"
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvDialogTitle"
         style="@style/voice_bottom_sheet_title_style"
         android:text="# 背景音乐"
         app:layout_constraintEnd_toEndOf="parent"
@@ -33,10 +34,12 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvMusicList"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="387dp"
+        android:background="@color/black"
+        tools:listitem="@layout/voice_room_music_item_layout"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mtBottomSheetTitle"
+        app:layout_constraintTop_toBottomOf="@+id/tvDialogTitle"
         />
 
     <View
@@ -49,12 +52,12 @@
         app:layout_constraintTop_toBottomOf="@+id/rvMusicList"
         />
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btnSound"
-        android:layout_width="42dp"
-        android:layout_height="42dp"
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/ivVolume"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:padding="8dp"
-        android:background="@drawable/voice_icon_bgm_play"
+        android:src="@drawable/voice_icon_bgm_volume"
         app:layout_constraintStart_toStartOf="@id/vBottom"
         app:layout_constraintTop_toBottomOf="@+id/rvMusicList"
         />
@@ -65,22 +68,23 @@
         android:layout_height="wrap_content"
         android:textSize="15sp"
         android:textColor="@color/voice_color_3c4267"
-        android:text="孤单心事"
-        app:layout_constraintStart_toEndOf="@+id/btnSound"
-        app:layout_constraintTop_toTopOf="@id/btnSound"
-        app:layout_constraintBottom_toBottomOf="@id/btnSound"
+        android:textStyle="bold"
+        app:layout_constraintStart_toEndOf="@+id/ivVolume"
+        app:layout_constraintTop_toTopOf="@id/ivVolume"
+        app:layout_constraintBottom_toBottomOf="@id/ivVolume"
         />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvSinger"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/voice_sp_12"
         android:textSize="13sp"
         android:textColor="@color/voice_color_3c4267"
-        android:text="梁雨"
+        android:alpha="0.6"
         app:layout_constraintStart_toEndOf="@+id/tvMusic"
-        app:layout_constraintTop_toTopOf="@id/btnSound"
-        app:layout_constraintBottom_toBottomOf="@id/btnSound"
+        app:layout_constraintTop_toTopOf="@id/ivVolume"
+        app:layout_constraintBottom_toBottomOf="@id/ivVolume"
         />
 
     <androidx.appcompat.widget.AppCompatImageView
@@ -90,8 +94,8 @@
         android:padding="8dp"
         android:src="@drawable/voice_icon_bgm_next"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/btnSound"
-        app:layout_constraintBottom_toBottomOf="@id/btnSound"
+        app:layout_constraintTop_toTopOf="@id/ivVolume"
+        app:layout_constraintBottom_toBottomOf="@id/ivVolume"
         />
 
     <androidx.appcompat.widget.AppCompatImageView
@@ -101,8 +105,8 @@
         android:padding="8dp"
         android:src="@drawable/voice_icon_bgm_play"
         app:layout_constraintEnd_toStartOf="@id/ivNext"
-        app:layout_constraintTop_toTopOf="@id/btnSound"
-        app:layout_constraintBottom_toBottomOf="@id/btnSound"
+        app:layout_constraintTop_toTopOf="@id/ivVolume"
+        app:layout_constraintBottom_toBottomOf="@id/ivVolume"
         />
 
     <androidx.appcompat.widget.AppCompatImageView
@@ -112,18 +116,34 @@
         android:padding="8dp"
         android:src="@drawable/voice_icon_bgm_sing_on"
         app:layout_constraintEnd_toStartOf="@id/ivPlay"
-        app:layout_constraintTop_toTopOf="@id/btnSound"
-        app:layout_constraintBottom_toBottomOf="@id/btnSound"
+        app:layout_constraintTop_toTopOf="@id/ivVolume"
+        app:layout_constraintBottom_toBottomOf="@id/ivVolume"
+        />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cvVolume"
+        android:layout_width="34dp"
+        android:layout_height="176dp"
+        android:layout_marginBottom="-10dp"
+        app:cardElevation="1dp"
+        app:cardBackgroundColor="#FAFBFC"
+        app:cardCornerRadius="@dimen/voice_sp_8"
+        app:layout_constraintStart_toStartOf="@id/ivVolume"
+        app:layout_constraintEnd_toEndOf="@id/ivVolume"
+        app:layout_constraintBottom_toTopOf="@id/ivVolume"
         />
 
     <androidx.appcompat.widget.AppCompatSeekBar
-        android:id="@+id/slSound"
-        android:background="@color/white"
-        android:layout_width="34dp"
+        android:id="@+id/slVolume"
+        style="@style/voice_bottom_sheet_progress"
+        android:layout_width="176dp"
         android:layout_height="176dp"
-        app:layout_constraintStart_toStartOf="@id/btnSound"
-        app:layout_constraintEnd_toEndOf="@id/btnSound"
-        app:layout_constraintBottom_toTopOf="@id/btnSound"
+        android:rotation="270"
+        android:elevation="1dp"
+        android:progress="50"
+        app:layout_constraintStart_toStartOf="@id/cvVolume"
+        app:layout_constraintEnd_toEndOf="@id/cvVolume"
+        app:layout_constraintBottom_toBottomOf="@id/cvVolume"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
