--- a/Android/scenes/voice/src/main/res/layout/voice_room_music_item_layout.xml
+++ b/Android/scenes/voice/src/main/res/layout/voice_room_music_item_layout.xml
@@ -2,16 +2,18 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/voice_transparent"
+    android:background="@color/white"
     android:layout_width="match_parent"
-    android:layout_height="50dp">
+    android:layout_height="40dp">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_marginLeft="20dp"
+        android:textSize="14dp"
         android:text="Music Name"
+        android:textColor="@color/voice_color_3c4267"
         android:gravity="center"
         app:layout_constraintStart_toStartOf="parent"
         />
@@ -20,15 +22,22 @@
         android:id="@+id/tvSinger"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="12dp"
+        android:textSize="@dimen/voice_sp_11"
+        android:textColor="@color/voice_color_3c4267"
+        android:alpha="0.6"
         android:text="singer"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tvTitle"
         />
 
     <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/ivSelected"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginRight="20dp"
+        android:visibility="visible"
+        android:src="@drawable/voice_icon_bgm_selected"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
