--- a/Android/scenes/ktv_singbattle/src/main/res/layout/activity_room_list.xml
+++ b/Android/scenes/ktv_singbattle/src/main/res/layout/activity_room_list.xml
@@ -58,6 +58,7 @@
         android:drawableStart="@mipmap/icon_create_room"
         android:gravity="center"
         android:paddingHorizontal="50dp"
+        android:layout_marginBottom="10dp"
         android:text="@string/ktv_create_room"
         android:textColor="@color/white"
         android:visibility="gone"
@@ -74,7 +75,7 @@
         android:layout_marginHorizontal="47dp"
         android:layout_marginTop="60dp"
         android:gravity="center"
-        android:text="@string/ktv_create_tips1"
+        android:text="@string/ktv_create_tips4"
         android:textColor="@color/def_text_color_3c4"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
