--- a/Android/scenes/ktv_singbattle/src/main/res/layout/activity_room_create.xml
+++ b/Android/scenes/ktv_singbattle/src/main/res/layout/activity_room_create.xml
@@ -9,6 +9,7 @@
 
     <io.agora.scene.widget.CommonTitleView
         android:id="@+id/title_view"
+        android:layout_marginTop="35dp"
         style="@style/title_view"
         app:ctv_centerText="@string/ktv_create_room"
         tools:ignore="MissingConstraints" />
