--- a/Android/scenes/ktv_singbattle/src/main/res/layout/ktv_layout_game_idle_view.xml
+++ b/Android/scenes/ktv_singbattle/src/main/res/layout/ktv_layout_game_idle_view.xml
@@ -15,7 +15,8 @@
         android:layout_marginTop="108dp"
         android:background="@mipmap/ktv_game_idle_text_background"
         android:text="@string/ktv_game_room_owner_idle"
-        android:textSize="40px"
+        android:textSize="16dp"
+        android:textStyle="bold"
         android:gravity="center"
         android:textColor="@color/white"
         app:layout_constraintTop_toTopOf="parent"
