--- a/Android/scenes/ktv/src/main/res/layout/ktv_activity_room_living.xml
+++ b/Android/scenes/ktv/src/main/res/layout/ktv_activity_room_living.xml
@@ -19,6 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="15dp"
         android:drawableStart="@mipmap/ic_k"
         android:drawablePadding="5dp"
         android:gravity="center_vertical"
