--- a/Android/scenes/voice/src/main/res/layout/voice_dialog_chatroom_bgm_setting.xml
+++ b/Android/scenes/voice/src/main/res/layout/voice_dialog_chatroom_bgm_setting.xml
@@ -36,7 +36,7 @@
         android:id="@+id/rvMusicList"
         android:layout_width="match_parent"
         android:layout_height="387dp"
-        android:background="@color/black"
+        android:background="@color/white"
         tools:listitem="@layout/voice_room_music_item_layout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvDialogTitle"
@@ -50,6 +50,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rvMusicList"
+        />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:background="@drawable/voice_view_top_shadow_gradient"
+        app:layout_constraintBottom_toTopOf="@+id/vBottom"
+        app:layout_constraintStart_toStartOf="parent"
         />
 
     <androidx.appcompat.widget.AppCompatImageView
@@ -124,8 +132,9 @@
         android:id="@+id/cvVolume"
         android:layout_width="34dp"
         android:layout_height="176dp"
-        android:layout_marginBottom="-10dp"
-        app:cardElevation="1dp"
+        android:layout_marginBottom="-3dp"
+        app:cardElevation="5dp"
+        android:visibility="invisible"
         app:cardBackgroundColor="#FAFBFC"
         app:cardCornerRadius="@dimen/voice_sp_8"
         app:layout_constraintStart_toStartOf="@id/ivVolume"
@@ -139,7 +148,8 @@
         android:layout_width="176dp"
         android:layout_height="176dp"
         android:rotation="270"
-        android:elevation="1dp"
+        android:visibility="invisible"
+        android:elevation="6dp"
         android:progress="50"
         app:layout_constraintStart_toStartOf="@id/cvVolume"
         app:layout_constraintEnd_toEndOf="@id/cvVolume"
