--- a/Android/scenes/ktv/src/main/res/layout/ktv_item_highlight_voice.xml
+++ b/Android/scenes/ktv/src/main/res/layout/ktv_item_highlight_voice.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="80dp"
     android:layout_height="80dp">
 
     <io.agora.scene.ktv.widget.CircularHornImageView
@@ -23,6 +23,6 @@
         android:id="@+id/select"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/shape_5d9bf1_r20" />
+        android:background="@mipmap/ktv_highlight_bg" />
 
 </RelativeLayout>
